feat: Support service deletion
